another test of path change

--- a/inst/includes/topnav.html
+++ b/inst/includes/topnav.html
@@ -1,8 +1,8 @@
       <div class = "mobile-logo visible-xs-block visible-sm-block">
-        <a href = "http://www.ncrad.org/index.html"><img src = "images/ncradlogo.png" class = "" /></a>
+        <a href = "http://www.ncrad.org/index.html"><img src = "www/images/ncradlogo.png" class = "" /></a>
       </div>
       <div class = "social-bar">
-        <a href = "http://www.ncrad.org/index.html" class = "navbar-logo"><img src = "images/ncradlogo2.png" class = "visible-md-inline visible-lg-inline"></img></a>
+        <a href = "http://www.ncrad.org/index.html" class = "navbar-logo"><img src = "www/images/ncradlogo2.png" class = "visible-md-inline visible-lg-inline"></img></a>
         <div class="social-buttons">
           <div class="dropdown">
             <button class = "btn btn-ncrad-green"><i class = "fa fa-usd"></i> Donate</button>
